<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeCity"
    android:background="@drawable/bg_gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cities"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/startColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/corners"
        android:layout_marginTop="50sp">

        <EditText
            android:layout_width="349dp"
            android:layout_height="43dp"
            android:id="@+id/city"
            android:hint="@string/changecity"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"/>
        <Button
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginRight="5dp"
            android:id="@+id/getcity"
            android:background="@drawable/getcity"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/citiescontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Russiancities"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Moscow"
                    android:text="@string/Moscow"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/SaintPetersburg"
                    android:text="@string/SaintPetersburg"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Novosibirsk"
                    android:text="@string/Novosibirsk"/>


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Ekaterinburg"
                    android:text="@string/Ekaterinburg"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Kazan"
                    android:text="@string/Kazan"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/NizhniyNovgorod"
                    android:text="@string/NizhniyNovgorod"/>


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Chelyabinsk"
                    android:text="@string/Chelyabinsk"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Omsk"
                    android:text="@string/Omsk"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Samara"
                    android:text="@string/Samara"/>


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/RostovNaDonu"
                    android:text="@string/RostovNaDonu"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Ufa"
                    android:text="@string/Ufa"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Krasnoyarsk"
                    android:text="@string/Krasnoyarsk"/>


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Perm"
                    android:text="@string/Perm"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Voronezh"
                    android:text="@string/Voronezh"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners"
                    android:id="@+id/Volgograd"
                    android:text="@string/Volgograd"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>